# srt-optimizer

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  run_pricelabs_transform.ps1  run_weekly_pipeline.ps1  tsconfig.json
config/: email.example.toml  pricelabs.example.env  pricelabs.single-listing.example.toml
contracts/: pricelabs-weekly-csv-v1.md
docs/: data-source-strategy-v1.md  email-delivery-design-v1.md  pricelabs-pipeline.md  pricelabs-playwright-download-design-v1.md  pricelabs-v1-source-to-target-mapping.md  project-artifact-audit-v1.md  recommendation-rules-v1.md  runbook-weekly-pricelabs.md  source-triage-for-analysis.md  standardized-output-contract-v1.md  task-scheduler-troubleshooting-v1.md  validation-checklist-v1.md  weekly-scheduling-design-v1.md  windows-task-scheduler-setup-v1.md
e2e/: API_TEST_WALKTHROUGH.md  api-example.spec.ts  example.spec.ts
sample_data/: Monthly Trends for 650255___717243.csv  Price Occ for 650255___717243.csv  pricelabs_future_export_180_day_filter.csv  pricelabs_future_export_duplicate_listing_date.csv  pricelabs_future_export_missing_min_stay.csv  pricelabs_future_export_sample.csv  pricelabs_future_export_status_cases.csv  pricelabs_settings_manual_input.json  pricelabs_settings_manual_input_prior.json
scripts/: run_scheduled_weekly_pipeline.ps1  run_weekly_with_pricelabs_downloads.ps1
tests/: example.spec.ts  test_bookings_report.py  test_email_draft_file.py  test_email_html_report.py  test_email_revenue_report.py  test_email_sender.py  test_enrich_future.py  (+9 more)
(+28 files in other folders)
