[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "srt-pricelabs-pipeline"
version = "0.1.0"
description = "Transformation-only scaffold for the weekly PriceLabs-to-CSV pipeline."
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["pricelabs*"]

